// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateContactForm should render channel 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Update contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              class="select_wrapper"
              data-testid="temba_select_type"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-input size-sm bold_placeholder"
                  data-passed-props="[object Object]"
                  data-testid="temba_select_input_type"
                  data-v-79844726=""
                >
                  <!---->
                  <div
                    class="input-container"
                    data-v-79844726=""
                  >
                    <!---->
                    <input
                      class="unnnic-font secondary"
                      data-v-79844726=""
                      placeholder="Update the contact"
                      type="text"
                    />
                    <span
                      class="unnnic-icon unnnic-icon__size--sm unnnic-icon-scheme--neutral-cloudy"
                      data-v-59b073b4=""
                      data-v-79844726=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_options_type"
                style="margin-top: 0px; width: 0px; display: none;"
              >
                <div
                  class="option active "
                  data-option-index="0"
                >
                  <span
                    class="name"
                  >
                    Send the contact a message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="1"
                >
                  <span
                    class="name"
                  >
                    Wait for the contact to respond
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="2"
                >
                  <span
                    class="name"
                  >
                    Send somebody else a message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="3"
                >
                  <span
                    class="name"
                  >
                    Label the incoming message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="4"
                >
                  <span
                    class="name"
                  >
                    Add a URN for the contact
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="5"
                >
                  <span
                    class="name"
                  >
                    Add the contact to a group
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="6"
                >
                  <span
                    class="name"
                  >
                    Remove the contact from a group
                  </span>
                </div>
                <div
                  class="option  selected"
                  data-option-index="7"
                >
                  <span
                    class="name"
                  >
                    Update the contact
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="8"
                >
                  <span
                    class="name"
                  >
                    Send email
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="9"
                >
                  <span
                    class="name"
                  >
                    Save a result for this flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="10"
                >
                  <span
                    class="name"
                  >
                    Call a webhook
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="11"
                >
                  <span
                    class="name"
                  >
                    Call Zapier
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="12"
                >
                  <span
                    class="name"
                  >
                    Enter another flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="13"
                >
                  <span
                    class="name"
                  >
                    Start somebody else in a flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="14"
                >
                  <span
                    class="name"
                  >
                    Open a ticket with a human agent
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="15"
                >
                  <span
                    class="name"
                  >
                    Send the contact airtime
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="16"
                >
                  <span
                    class="name"
                  >
                    Split by intent
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="17"
                >
                  <span
                    class="name"
                  >
                    Split by a custom expression
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="18"
                >
                  <span
                    class="name"
                  >
                    Split by contact field
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="19"
                >
                  <span
                    class="name"
                  >
                    Split by a result in the flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="20"
                >
                  <span
                    class="name"
                  >
                    Split randomly
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="21"
                >
                  <span
                    class="name"
                  >
                    Split by group membership
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="22"
                >
                  <span
                    class="name"
                  >
                    Split by URN type
                  </span>
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_expressions_type"
                style="margin-top: 0px; width: 0px; display: none;"
              />
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Select what to update
          </div>
          <div
            class="select_wrapper"
            data-testid="temba_select_select_what_to_update"
          >
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-input size-sm bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_input_select_what_to_update"
                data-v-79844726=""
              >
                <!---->
                <div
                  class="input-container"
                  data-v-79844726=""
                >
                  <!---->
                  <input
                    class="unnnic-font secondary"
                    data-v-79844726=""
                    placeholder="Channel"
                    type="text"
                  />
                  <span
                    class="unnnic-icon unnnic-icon__size--sm unnnic-icon-scheme--neutral-cloudy"
                    data-v-59b073b4=""
                    data-v-79844726=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <div
              class="options_wrapper"
              data-testid="temba_select_options_select_what_to_update"
              style="margin-top: 0px; width: 0px; display: none;"
            >
              <div
                class="option active "
                data-option-index="0"
              >
                <span
                  class="name"
                >
                  Name
                </span>
              </div>
              <div
                class="option  "
                data-option-index="1"
              >
                <span
                  class="name"
                >
                  Language
                </span>
              </div>
              <div
                class="option  selected"
                data-option-index="2"
              >
                <span
                  class="name"
                >
                  Channel
                </span>
              </div>
              <div
                class="option  "
                data-option-index="3"
              >
                <span
                  class="name"
                >
                  Status
                </span>
              </div>
            </div>
            <div
              class="options_wrapper"
              data-testid="temba_select_expressions_select_what_to_update"
              style="margin-top: 0px; width: 0px; display: none;"
            />
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="label u font secondary body-md color-neutral-cloudy"
            >
              Channel
            </div>
            <div
              class="select_wrapper"
              data-testid="temba_select_channel"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-input size-sm bold_placeholder"
                  data-passed-props="[object Object]"
                  data-testid="temba_select_input_channel"
                  data-v-79844726=""
                >
                  <!---->
                  <div
                    class="input-container"
                    data-v-79844726=""
                  >
                    <!---->
                    <input
                      class="unnnic-font secondary"
                      data-v-79844726=""
                      placeholder="Twilio Channel"
                      type="text"
                    />
                    <span
                      class="unnnic-icon unnnic-icon__size--sm unnnic-icon-scheme--neutral-cloudy"
                      data-v-59b073b4=""
                      data-v-79844726=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_options_channel"
                style="margin-top: 0px; width: 0px; display: none;"
              >
                <div
                  class="option active "
                  data-option-index="0"
                >
                  <span
                    class="name"
                  >
                    Remove Value
                  </span>
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_expressions_channel"
                style="margin-top: 0px; width: 0px; display: none;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button-next unnnic-button-next--size-large unnnic-button-next--ghost unnnic-button-next-scheme--"
                  data-passed-props="[object Object]"
                  data-v-1eef067c=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button-next__label"
                    data-v-1eef067c=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button-next unnnic-button-next--size-large unnnic-button-next--primary unnnic-button-next-scheme--undefined"
                  data-passed-props="[object Object]"
                  data-v-1eef067c=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button-next__label"
                    data-v-1eef067c=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render field 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Update contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              class="select_wrapper"
              data-testid="temba_select_type"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-input size-sm bold_placeholder"
                  data-passed-props="[object Object]"
                  data-testid="temba_select_input_type"
                  data-v-79844726=""
                >
                  <!---->
                  <div
                    class="input-container"
                    data-v-79844726=""
                  >
                    <!---->
                    <input
                      class="unnnic-font secondary"
                      data-v-79844726=""
                      placeholder="Update the contact"
                      type="text"
                    />
                    <span
                      class="unnnic-icon unnnic-icon__size--sm unnnic-icon-scheme--neutral-cloudy"
                      data-v-59b073b4=""
                      data-v-79844726=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_options_type"
                style="margin-top: 0px; width: 0px; display: none;"
              >
                <div
                  class="option active "
                  data-option-index="0"
                >
                  <span
                    class="name"
                  >
                    Send the contact a message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="1"
                >
                  <span
                    class="name"
                  >
                    Wait for the contact to respond
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="2"
                >
                  <span
                    class="name"
                  >
                    Send somebody else a message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="3"
                >
                  <span
                    class="name"
                  >
                    Label the incoming message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="4"
                >
                  <span
                    class="name"
                  >
                    Add a URN for the contact
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="5"
                >
                  <span
                    class="name"
                  >
                    Add the contact to a group
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="6"
                >
                  <span
                    class="name"
                  >
                    Remove the contact from a group
                  </span>
                </div>
                <div
                  class="option  selected"
                  data-option-index="7"
                >
                  <span
                    class="name"
                  >
                    Update the contact
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="8"
                >
                  <span
                    class="name"
                  >
                    Send email
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="9"
                >
                  <span
                    class="name"
                  >
                    Save a result for this flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="10"
                >
                  <span
                    class="name"
                  >
                    Call a webhook
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="11"
                >
                  <span
                    class="name"
                  >
                    Call Zapier
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="12"
                >
                  <span
                    class="name"
                  >
                    Enter another flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="13"
                >
                  <span
                    class="name"
                  >
                    Start somebody else in a flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="14"
                >
                  <span
                    class="name"
                  >
                    Open a ticket with a human agent
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="15"
                >
                  <span
                    class="name"
                  >
                    Send the contact airtime
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="16"
                >
                  <span
                    class="name"
                  >
                    Split by intent
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="17"
                >
                  <span
                    class="name"
                  >
                    Split by a custom expression
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="18"
                >
                  <span
                    class="name"
                  >
                    Split by contact field
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="19"
                >
                  <span
                    class="name"
                  >
                    Split by a result in the flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="20"
                >
                  <span
                    class="name"
                  >
                    Split randomly
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="21"
                >
                  <span
                    class="name"
                  >
                    Split by group membership
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="22"
                >
                  <span
                    class="name"
                  >
                    Split by URN type
                  </span>
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_expressions_type"
                style="margin-top: 0px; width: 0px; display: none;"
              />
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Select what to update
          </div>
          <div
            class="select_wrapper"
            data-testid="temba_select_select_what_to_update"
          >
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-input size-sm bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_input_select_what_to_update"
                data-v-79844726=""
              >
                <!---->
                <div
                  class="input-container"
                  data-v-79844726=""
                >
                  <!---->
                  <input
                    class="unnnic-font secondary"
                    data-v-79844726=""
                    placeholder="Age"
                    type="text"
                  />
                  <span
                    class="unnnic-icon unnnic-icon__size--sm unnnic-icon-scheme--neutral-cloudy"
                    data-v-59b073b4=""
                    data-v-79844726=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <div
              class="options_wrapper"
              data-testid="temba_select_options_select_what_to_update"
              style="margin-top: 0px; width: 0px; display: none;"
            >
              <div
                class="option active "
                data-option-index="0"
              >
                <span
                  class="name"
                >
                  Name
                </span>
              </div>
              <div
                class="option  "
                data-option-index="1"
              >
                <span
                  class="name"
                >
                  Language
                </span>
              </div>
              <div
                class="option  "
                data-option-index="2"
              >
                <span
                  class="name"
                >
                  Channel
                </span>
              </div>
              <div
                class="option  "
                data-option-index="3"
              >
                <span
                  class="name"
                >
                  Status
                </span>
              </div>
            </div>
            <div
              class="options_wrapper"
              data-testid="temba_select_expressions_select_what_to_update"
              style="margin-top: 0px; width: 0px; display: none;"
            />
          </div>
        </div>
        <div
          class="value"
        >
          <div>
            <span
              class="label"
            >
              Field Value
            </span>
            <div
              class="completion_wrapper"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-input size-sm"
                  data-passed-props="[object Object]"
                  data-testid="Field Value"
                  data-v-79844726=""
                >
                  <!---->
                  <div
                    class="input-container"
                    data-v-79844726=""
                  >
                    <!---->
                    <input
                      class="unnnic-font secondary"
                      data-v-79844726=""
                      placeholder=""
                      type="text"
                    />
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_completion_options_Field Value"
                style="margin-top: 0px; width: 0px; display: none;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button-next unnnic-button-next--size-large unnnic-button-next--ghost unnnic-button-next-scheme--"
                  data-passed-props="[object Object]"
                  data-v-1eef067c=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button-next__label"
                    data-v-1eef067c=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button-next unnnic-button-next--size-large unnnic-button-next--primary unnnic-button-next-scheme--undefined"
                  data-passed-props="[object Object]"
                  data-v-1eef067c=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button-next__label"
                    data-v-1eef067c=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render language 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Update contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              class="select_wrapper"
              data-testid="temba_select_type"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-input size-sm bold_placeholder"
                  data-passed-props="[object Object]"
                  data-testid="temba_select_input_type"
                  data-v-79844726=""
                >
                  <!---->
                  <div
                    class="input-container"
                    data-v-79844726=""
                  >
                    <!---->
                    <input
                      class="unnnic-font secondary"
                      data-v-79844726=""
                      placeholder="Update the contact"
                      type="text"
                    />
                    <span
                      class="unnnic-icon unnnic-icon__size--sm unnnic-icon-scheme--neutral-cloudy"
                      data-v-59b073b4=""
                      data-v-79844726=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_options_type"
                style="margin-top: 0px; width: 0px; display: none;"
              >
                <div
                  class="option active "
                  data-option-index="0"
                >
                  <span
                    class="name"
                  >
                    Send the contact a message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="1"
                >
                  <span
                    class="name"
                  >
                    Wait for the contact to respond
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="2"
                >
                  <span
                    class="name"
                  >
                    Send somebody else a message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="3"
                >
                  <span
                    class="name"
                  >
                    Label the incoming message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="4"
                >
                  <span
                    class="name"
                  >
                    Add a URN for the contact
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="5"
                >
                  <span
                    class="name"
                  >
                    Add the contact to a group
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="6"
                >
                  <span
                    class="name"
                  >
                    Remove the contact from a group
                  </span>
                </div>
                <div
                  class="option  selected"
                  data-option-index="7"
                >
                  <span
                    class="name"
                  >
                    Update the contact
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="8"
                >
                  <span
                    class="name"
                  >
                    Send email
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="9"
                >
                  <span
                    class="name"
                  >
                    Save a result for this flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="10"
                >
                  <span
                    class="name"
                  >
                    Call a webhook
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="11"
                >
                  <span
                    class="name"
                  >
                    Call Zapier
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="12"
                >
                  <span
                    class="name"
                  >
                    Enter another flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="13"
                >
                  <span
                    class="name"
                  >
                    Start somebody else in a flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="14"
                >
                  <span
                    class="name"
                  >
                    Open a ticket with a human agent
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="15"
                >
                  <span
                    class="name"
                  >
                    Send the contact airtime
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="16"
                >
                  <span
                    class="name"
                  >
                    Split by intent
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="17"
                >
                  <span
                    class="name"
                  >
                    Split by a custom expression
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="18"
                >
                  <span
                    class="name"
                  >
                    Split by contact field
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="19"
                >
                  <span
                    class="name"
                  >
                    Split by a result in the flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="20"
                >
                  <span
                    class="name"
                  >
                    Split randomly
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="21"
                >
                  <span
                    class="name"
                  >
                    Split by group membership
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="22"
                >
                  <span
                    class="name"
                  >
                    Split by URN type
                  </span>
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_expressions_type"
                style="margin-top: 0px; width: 0px; display: none;"
              />
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Select what to update
          </div>
          <div
            class="select_wrapper"
            data-testid="temba_select_select_what_to_update"
          >
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-input size-sm bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_input_select_what_to_update"
                data-v-79844726=""
              >
                <!---->
                <div
                  class="input-container"
                  data-v-79844726=""
                >
                  <!---->
                  <input
                    class="unnnic-font secondary"
                    data-v-79844726=""
                    placeholder="Language"
                    type="text"
                  />
                  <span
                    class="unnnic-icon unnnic-icon__size--sm unnnic-icon-scheme--neutral-cloudy"
                    data-v-59b073b4=""
                    data-v-79844726=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <div
              class="options_wrapper"
              data-testid="temba_select_options_select_what_to_update"
              style="margin-top: 0px; width: 0px; display: none;"
            >
              <div
                class="option active "
                data-option-index="0"
              >
                <span
                  class="name"
                >
                  Name
                </span>
              </div>
              <div
                class="option  selected"
                data-option-index="1"
              >
                <span
                  class="name"
                >
                  Language
                </span>
              </div>
              <div
                class="option  "
                data-option-index="2"
              >
                <span
                  class="name"
                >
                  Channel
                </span>
              </div>
              <div
                class="option  "
                data-option-index="3"
              >
                <span
                  class="name"
                >
                  Status
                </span>
              </div>
            </div>
            <div
              class="options_wrapper"
              data-testid="temba_select_expressions_select_what_to_update"
              style="margin-top: 0px; width: 0px; display: none;"
            />
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="label u font secondary body-md color-neutral-cloudy"
            >
              Language
            </div>
            <div
              class="select_wrapper"
              data-testid="temba_select_language"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-input size-sm bold_placeholder"
                  data-passed-props="[object Object]"
                  data-testid="temba_select_input_language"
                  data-v-79844726=""
                >
                  <!---->
                  <div
                    class="input-container"
                    data-v-79844726=""
                  >
                    <!---->
                    <input
                      class="unnnic-font secondary"
                      data-v-79844726=""
                      placeholder="eng"
                      readonly="readonly"
                      type="text"
                    />
                    <span
                      class="unnnic-icon unnnic-icon__size--sm unnnic-icon-scheme--neutral-cloudy"
                      data-v-59b073b4=""
                      data-v-79844726=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_options_language"
                style="margin-top: 0px; width: 0px; display: none;"
              >
                <div
                  class="option active "
                  data-option-index="0"
                >
                  <span
                    class="name"
                  >
                    Remove Value
                  </span>
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_expressions_language"
                style="margin-top: 0px; width: 0px; display: none;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button-next unnnic-button-next--size-large unnnic-button-next--ghost unnnic-button-next-scheme--"
                  data-passed-props="[object Object]"
                  data-v-1eef067c=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button-next__label"
                    data-v-1eef067c=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button-next unnnic-button-next--size-large unnnic-button-next--primary unnnic-button-next-scheme--undefined"
                  data-passed-props="[object Object]"
                  data-v-1eef067c=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button-next__label"
                    data-v-1eef067c=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render name 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Update contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              class="select_wrapper"
              data-testid="temba_select_type"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-input size-sm bold_placeholder"
                  data-passed-props="[object Object]"
                  data-testid="temba_select_input_type"
                  data-v-79844726=""
                >
                  <!---->
                  <div
                    class="input-container"
                    data-v-79844726=""
                  >
                    <!---->
                    <input
                      class="unnnic-font secondary"
                      data-v-79844726=""
                      placeholder="Update the contact"
                      type="text"
                    />
                    <span
                      class="unnnic-icon unnnic-icon__size--sm unnnic-icon-scheme--neutral-cloudy"
                      data-v-59b073b4=""
                      data-v-79844726=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_options_type"
                style="margin-top: 0px; width: 0px; display: none;"
              >
                <div
                  class="option active "
                  data-option-index="0"
                >
                  <span
                    class="name"
                  >
                    Send the contact a message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="1"
                >
                  <span
                    class="name"
                  >
                    Wait for the contact to respond
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="2"
                >
                  <span
                    class="name"
                  >
                    Send somebody else a message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="3"
                >
                  <span
                    class="name"
                  >
                    Label the incoming message
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="4"
                >
                  <span
                    class="name"
                  >
                    Add a URN for the contact
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="5"
                >
                  <span
                    class="name"
                  >
                    Add the contact to a group
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="6"
                >
                  <span
                    class="name"
                  >
                    Remove the contact from a group
                  </span>
                </div>
                <div
                  class="option  selected"
                  data-option-index="7"
                >
                  <span
                    class="name"
                  >
                    Update the contact
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="8"
                >
                  <span
                    class="name"
                  >
                    Send email
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="9"
                >
                  <span
                    class="name"
                  >
                    Save a result for this flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="10"
                >
                  <span
                    class="name"
                  >
                    Call a webhook
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="11"
                >
                  <span
                    class="name"
                  >
                    Call Zapier
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="12"
                >
                  <span
                    class="name"
                  >
                    Enter another flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="13"
                >
                  <span
                    class="name"
                  >
                    Start somebody else in a flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="14"
                >
                  <span
                    class="name"
                  >
                    Open a ticket with a human agent
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="15"
                >
                  <span
                    class="name"
                  >
                    Send the contact airtime
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="16"
                >
                  <span
                    class="name"
                  >
                    Split by intent
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="17"
                >
                  <span
                    class="name"
                  >
                    Split by a custom expression
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="18"
                >
                  <span
                    class="name"
                  >
                    Split by contact field
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="19"
                >
                  <span
                    class="name"
                  >
                    Split by a result in the flow
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="20"
                >
                  <span
                    class="name"
                  >
                    Split randomly
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="21"
                >
                  <span
                    class="name"
                  >
                    Split by group membership
                  </span>
                </div>
                <div
                  class="option  "
                  data-option-index="22"
                >
                  <span
                    class="name"
                  >
                    Split by URN type
                  </span>
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_select_expressions_type"
                style="margin-top: 0px; width: 0px; display: none;"
              />
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Select what to update
          </div>
          <div
            class="select_wrapper"
            data-testid="temba_select_select_what_to_update"
          >
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-input size-sm bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_input_select_what_to_update"
                data-v-79844726=""
              >
                <!---->
                <div
                  class="input-container"
                  data-v-79844726=""
                >
                  <!---->
                  <input
                    class="unnnic-font secondary"
                    data-v-79844726=""
                    placeholder="Name"
                    type="text"
                  />
                  <span
                    class="unnnic-icon unnnic-icon__size--sm unnnic-icon-scheme--neutral-cloudy"
                    data-v-59b073b4=""
                    data-v-79844726=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <div
              class="options_wrapper"
              data-testid="temba_select_options_select_what_to_update"
              style="margin-top: 0px; width: 0px; display: none;"
            >
              <div
                class="option active selected"
                data-option-index="0"
              >
                <span
                  class="name"
                >
                  Name
                </span>
              </div>
              <div
                class="option  "
                data-option-index="1"
              >
                <span
                  class="name"
                >
                  Language
                </span>
              </div>
              <div
                class="option  "
                data-option-index="2"
              >
                <span
                  class="name"
                >
                  Channel
                </span>
              </div>
              <div
                class="option  "
                data-option-index="3"
              >
                <span
                  class="name"
                >
                  Status
                </span>
              </div>
            </div>
            <div
              class="options_wrapper"
              data-testid="temba_select_expressions_select_what_to_update"
              style="margin-top: 0px; width: 0px; display: none;"
            />
          </div>
        </div>
        <div
          class="value"
        >
          <div>
            <span
              class="label"
            >
              Enter a new contact name
            </span>
            <div
              class="completion_wrapper"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-input size-sm"
                  data-passed-props="[object Object]"
                  data-testid="Enter a new contact name"
                  data-v-79844726=""
                >
                  <!---->
                  <div
                    class="input-container"
                    data-v-79844726=""
                  >
                    <!---->
                    <input
                      class="unnnic-font secondary"
                      data-v-79844726=""
                      placeholder="Enter a new contact name"
                      type="text"
                    />
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_completion_options_Enter a new contact name"
                style="margin-top: 0px; width: 0px; display: none;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button-next unnnic-button-next--size-large unnnic-button-next--ghost unnnic-button-next-scheme--"
                  data-passed-props="[object Object]"
                  data-v-1eef067c=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button-next__label"
                    data-v-1eef067c=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button-next unnnic-button-next--size-large unnnic-button-next--primary unnnic-button-next-scheme--undefined"
                  data-passed-props="[object Object]"
                  data-v-1eef067c=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button-next__label"
                    data-v-1eef067c=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
